Modify the world editor, add object editors.

--- a/muddery/worlddata/webclient/views/main.html
+++ b/muddery/worlddata/webclient/views/main.html
@@ -92,27 +92,27 @@
                         <div id="collapseListGroup2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading2">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:world_areas">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:AREA">
                                     区域
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:world_rooms">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:ROOM">
                                     房间
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:world_exits">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:EXIT">
                                     出口
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:world_objects">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:WORLD_OBJECT">
                                     世界物体
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:world_npcs">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:WORLD_NPC">
                                     世界NPC
                                 </button>
                               </li>
@@ -144,12 +144,12 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:world_npcs">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:WORLD_NPC">
                                     世界NPC
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:common_characters">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:COMMON_NPC">
                                     普通角色
                                 </button>
                               </li>
@@ -164,7 +164,7 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:skills">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:SKILL">
                                     技能
                                 </button>
                               </li>
@@ -196,12 +196,12 @@
                         <div id="collapseListGroup4" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading4">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:world_objects">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:WORLD_OBJECT">
                                     世界物体
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:common_objects">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:COMMON_OBJECT">
                                     普通物品
                                 </button>
                               </li>
@@ -211,22 +211,22 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:foods">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:FOOD">
                                     食物
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:skill_books">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:SKILL_BOOK">
                                     技能书
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:equipments">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:EQUIPMENT">
                                     装备
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="common_table" data-params="table:object_creators">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:WORLD_OBJECT_CREATOR">
                                     物品生成器
                                 </button>
                               </li>
@@ -273,7 +273,7 @@
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:equipments">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:EQUIPMENT">
                                     装备
                                 </button>
                               </li>
@@ -290,7 +290,7 @@
                         <div id="collapseListGroup6" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading6">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:quests">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:QUEST">
                                     任务
                                 </button>
                               </li>
@@ -359,12 +359,12 @@
                         <div id="collapseListGroup9" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading9">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:shops">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:SHOP">
                                     商店
                                 </button>
                               </li>
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="object_table" data-params="table:shop_goods">
+                                <button class="menu-item-left" data-page="object_table" data-params="typeclass:SHOP_GOODS">
                                     商品
                                 </button>
                               </li>
