--- a/muddery/worlddata/webclient/views/object_table.html
+++ b/muddery/worlddata/webclient/views/object_table.html
@@ -9,6 +9,7 @@
         <meta name="HandheldFriendly" content="True" />
         <link href="../css/bootstrap.min.css" rel="stylesheet" type="text/css" />
         <link href="../css/bootstrap-table.min.css" rel="stylesheet" type="text/css" >
+        <link href="../css/common_table.css" rel="stylesheet" type="text/css" />
         <link href="../css/object_table.css" rel="stylesheet" type="text/css" />
     </head>
 
