Fix a bug in setting the game world.

--- a/muddery/worlddata/webclient/views/main.html
+++ b/muddery/worlddata/webclient/views/main.html
@@ -65,7 +65,7 @@
                         <div id="collapseListGroup1" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading1">
                             <ul class="list-group">
                               <li class="list-group-item">
-                                <button class="menu-item-left" data-page="common_table" data-params="table:game_settings">
+                                <button class="menu-item-left" data-page="settings_editor" data-params="table:game_settings">
                                     游戏设置
                                 </button>
                               </li>
