Add a map editor.

--- a/muddery/worlddata/webclient/views/main.html
+++ b/muddery/worlddata/webclient/views/main.html
@@ -91,6 +91,11 @@
                         </div>
                         <div id="collapseListGroup2" class="panel-collapse collapse" role="tabpanel" aria-labelledby="collapseListGroupHeading2">
                             <ul class="list-group">
+                                <li class="list-group-item">
+                                    <button class="menu-item-left" data-page="map_table">
+                                        地图
+                                    </button>
+                                </li>
                               <li class="list-group-item">
                                 <button class="menu-item-left" data-page="object_table" data-params="typeclass:AREA">
                                     区域
