--- a/muddery/worlddata/webclient/css/map_editor.css
+++ b/muddery/worlddata/webclient/css/map_editor.css
@@ -122,7 +122,8 @@
 }
 
 .element-menu {
-    border: 1px solid #555;
+    border: 1px solid #aaa;
+    border-radius: 5px;
     background: #fff;
     z-index: 100;
 }
@@ -134,4 +135,25 @@
 
 .menu-item:last-child {
     border-bottom: 0;
+}
+
+.menu-room-name {
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+    padding: 10px 10px 10px 2px;
+}
+
+.menu-room-key, .menu-room-typeclass {
+    text-align: center;
+    font-size: 14px;
+    padding: 2px 10px;
+}
+
+.menu-button-bar {
+    text-align: center;
+}
+
+.menu-button {
+    margin: 10px;
 }
