--- a/muddery/worlddata/webclient/views/map_editor.html
+++ b/muddery/worlddata/webclient/views/map_editor.html
@@ -46,8 +46,8 @@
                     <p class="block-title">上传地图</p>
                     <input class="image-input-control" type="file">
                     <input class="editor-control" type="hidden">
-                    <input class="button-control" type="button" value="Upload">
-                    <input class="button-control" type="button" value="Delete">
+                    <input id="upload-background" class="button-control" type="button" value="Upload">
+                    <input id="delete-background" class="button-control" type="button" value="Delete">
                 </div>
                 <div class="block">
                     <p class="block-title">设置地图大小</p>
