--- a/muddery/worlddata/webclient/views/map_editor.html
+++ b/muddery/worlddata/webclient/views/map_editor.html
@@ -20,7 +20,7 @@
                     <div id="form-name" class="pull-left">
                     </div>
                     <div class="pull-right">
-                        <button id="exit-button" type="button" class="btn btn-default right hidden">Back</button>
+                        <button id="discard-button" type="button" class="btn btn-default right hidden">Discard</button>
                         <button id="save-record" type="button" class="btn btn-success right hidden">Save</button>
                         <button id="delete-record" type="button" class="btn btn-danger right hidden">Delete</button>
                     </div>
@@ -33,7 +33,7 @@
                     <div id="container">
                         <div id="element-selector" class="block">
                             <p id="selector-title">添加房间</p>
-                            <div id="element-room" class="new-element element-room"></div>
+                            <div id="new-element-room" class="new-element element-room"></div>
                         </div>
                         <svg id="map-svg" version="1.1"  xmlns="http://www.w3.org/2000/svg">
                         </svg>
